@@ -26,7 +26,7 @@ siteTag   = ALC
 
 debugMode = False
 localTime = True
-modules   = bouncer ftpd free gldata groups help invite online pretimes readlogs sitecmd
+modules   = bouncer free ftpd gldata groups help invite online pretimes readlogs sitecmd
 themeFile = default-gl.theme
 varFiles  = core.vars glftpd.vars
 
