@@ -26,7 +26,7 @@ siteTag   = ALC
 
 debugMode = False
 localTime = True
-modules   = bouncer ftpd free groups help invite online pretimes readlogs sitecmd
+modules   = bouncer free ftpd groups help invite online pretimes readlogs sitecmd
 themeFile = default-io.theme
 varFiles  = core.vars ioftpd.vars
 
